# AI-Chess

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build-tauri.bat  index.html  package-lock.json  package.json  vite.config.ts
docs/screenshots/: _capture.ps1  _nav.ps1
src/: App.tsx  chessUtils.ts  secrets.ts  sound.ts  styles.css  types.ts  updater.ts
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_analysis.sql  003_secrets.sql  004_tournaments.sql
src-tauri/src/: lib.rs  main.rs  secret.rs
src/components/: AnalysisPanel.tsx  Avatar.tsx  Board.tsx  CapturedPieces.tsx  EvalBar.tsx  EvalGraph.tsx  GameOverDialog.tsx  GameSetupDialog.tsx  MoveList.tsx  PlayerPanel.tsx  PromotionDialog.tsx  WelcomeScreen.tsx
src/db/: database.ts  gamesRepo.ts
src/engine/: analysis.ts  gameRunner.ts  openings.ts  stockfish.ts
src/i18n/: helpContent.ts  strings.ts
src/llm/: httpProxy.ts  moveService.ts  parseMove.ts  prompt.ts  reportService.ts  types.ts
src/llm/providers/: anthropic.ts  custom.ts  gemini.ts  index.ts  mock.ts  ollama.ts  openai.ts
src/pages/: AboutPage.tsx  HelpPage.tsx  HistoryPage.tsx  PlayPage.tsx  ReplayPage.tsx  SettingsPage.tsx  TournamentPage.tsx
src/store/: gameStore.ts  settingsStore.ts  tournamentStore.ts
src/themes/: modernPieces.tsx  themes.ts
tests/: moveService.test.ts  parseMove.test.ts
