[package]
name = "ai-chess"
version = "0.1.0"
description = "AI modelleriyle satranç — Claude, ChatGPT, Gemini, Ollama"
edition = "2021"

[lib]
name = "ai_chess_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
